# meli-case-fraud

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/mass/: payload.json
models/encoders/: build_features.pkl  feature_type.pkl  fill_numeric.pkl  selector.pkl  string_encoder.pkl
models/predictors/: model.pkl
models/wrapped/: model_pipeline_prod.pkl  model_pipeline_test.pkl
notebooks/: 01-baseline.ipynb  02-basic_process.ipynb  03-split_tables.ipynb  04-feature_engineering.ipynb  05-feature_selection.ipynb  06-stability.ipynb  07-encoding.ipynb  08-model_selection.ipynb  09-results.ipynb
src/data/: basic_process.py  split_tables.py
src/data/config/: features.yaml
src/features/: build_features.py  create_encoders.py  feature_selection.py  stability.py
src/model/: generate_artifacts.py  latency.py  train.py  tuning.py
src/model/optuna_tuning_results/: best_params.yaml
src/utils/: features_manager.py  optuna_settings.py  stability_report.py  transformers.py
